fixed pom